# django-umanet

./: .gitignore  .nvim.lua  db.sqlite3  devenv.nix  hello.py  pyproject.toml
contatti/: apps.py  forms.py  models.py  urls.py  views.py
contatti/migrations/: 0001_initial.py
contatti/templates/: contatti_contattaci.html  contatti_lista.html  elimina_contatto.html  modifica_contatto.html
corsi_formazione/: models.py  urls.py  views.py
corsi_formazione/migrations/: 0001_initial.py
news/: admin.py  models.py  urls.py  views.py
prima_app/: views.py
primo_progetto/: settings.py  urls.py  views.py  wsgi.py
primo_progetto_root/: pyproject.toml
primo_progetto_root/primo_progetto/: .nvim.lua  manage.py
primo_progetto_root/primo_progetto/news/: models.py
primo_progetto_root/primo_progetto/news/migrations/: 0001_initial.py
primo_progetto_root/primo_progetto/prima_app/: urls.py
primo_progetto_root/primo_progetto/prima_app/templates/prima_app/: homepage.html  lista.html  variabili.html
primo_progetto_root/primo_progetto/primo_progetto/: asgi.py  settings.py  urls.py  views.py
primo_progetto_root/primo_progetto/primo_progetto/templates/primo_progetto/: chi_siamo.html
primo_progetto_root/primo_progetto/queries/: first_query.py
primo_progetto_root/primo_progetto/seconda_app/: urls.py  views.py
primo_progetto_root/primo_progetto/seconda_app/templates/seconda_app/: es_for.html  es_if.html
queries/: first_query.py  query_articles.py
templates/: base.html  chi_siamo.html  index_root.html
voti/: db_setup.py  models.py  urls.py  views.py
(+28 files in other folders)
