[project]
name = "django-umanet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.5",
    "django-crispy-forms>=2.3",
    "django-types>=0.20.0",
]
