[tool.poetry]
name = "primo-progetto-root"
version = "0.1.0"
description = ""
authors = ["ser <140543954+serlovesferrets@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-types = "^0.19.1"
django-stubs = "^5.1.1"
django-stub = {extras = ["compatible-mypy"], version = "^0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
